--- a/fields.html
+++ b/fields.html
@@ -180,15 +180,15 @@
                     href="https://www.google.com.co/maps/place/890+N+State+St,+Elgin,+IL+60123,+США/@42.0554352,-88.2985164,17z/data=!3m1!4b1!4m6!3m5!1s0x880f056ff4b76fe9:0x846ef8c3930b5206!8m2!3d42.0554352!4d-88.2959415!16s%2Fg%2F11cp7ym2dw?entry=ttu&g_ep=EgoyMDI1MDMxNy4wIKXMDSoASAFQAw%3D%3D"
                     target="_blank"
                   >
-                    <i class="fa-sharp fa-solid fa-location-dot"></i> 66
-                    Broklyne Golden Street, USA</a
+                    <i class="fa-sharp fa-solid fa-location-dot"></i> 890 N
+                    State St Elgin, IL 60123</a
                   >
                 </div>
                 <div class="envelope">
-                  <a href="mailto:safety.westconsult@gmail.com"
+                  <a href="mailto:info@thewestconsult.com "
                     ><i class="fa-solid fa-envelope"></i>
-                    safety.westconsult@gmail.com</a
-                  >
+                    info@thewestconsult.com
+                  </a>
                 </div>
               </div>
             </div>
@@ -211,10 +211,10 @@
                           <li>
                             <a href="faqs.html">FAQ</a>
                           </li>
-                          <li><a href="contact.html">Contact</a></li>
                           <li>
-                            <a class="active" href="fields.html">Forms</a>
+                            <a class="active" href="contact.html">Contact</a>
                           </li>
+                          <li><a href="fields.html">Forms</a></li>
                         </ul>
                       </nav>
                     </div>
@@ -224,11 +224,6 @@
                   class="tp-header__right-box d-flex justify-content-end align-items-center"
                 >
                   <div class="tp-header__right d-flex align-items-center">
-                    <div class="tp-header-search search-open-btn">
-                      <a href="javascript:void(0);">
-                        <i class="fa-regular fa-magnifying-glass"></i
-                      ></a>
-                    </div>
                     <div class="tp-header__contact-number">
                       <div class="sm-clist__icon">
                         <i class="flaticon-telephone"></i>
@@ -376,29 +371,42 @@
                 <div class="card mb-30">
                   <div class="card-header" id="headingOne">
                     <span class="mb-0">
-                      
-                      <button class="btn btn-link collapsed">
-                        What services does West Consult INC offer?
-                      </button>
+                      <a
+                        href="./assets/forms/IRP Registration Requirements (2).pdf"
+                        target="_blank"
+                      >
+                        <button class="btn btn-link collapsed btn-hover">
+                          IRP Registration Requirements
+                        </button>
+                      </a>
                     </span>
                   </div>
                 </div>
                 <div class="card mb-30">
                   <div class="card-header" id="headingTwo">
                     <span class="mb-0">
-                      <button class="btn btn-link collapsed">
-                        How do I know if my business is compliant with <br />
-                        DOT regulations?
-                      </button>
+                      <a
+                        href="./assets/forms/Motor Carrier Identification Report (MCS-150) (1).pdf"
+                        target="_blank"
+                      >
+                        <button class="btn btn-link collapsed btn-hover">
+                          Motor Carrier Identification Report (MCS-150)
+                        </button>
+                      </a>
                     </span>
                   </div>
                 </div>
                 <div class="card mb-30">
                   <div class="card-header" id="headingThree">
                     <span class="mb-0">
-                      <button class="btn btn-link collapsed">
-                        What is SMS Score, and why is it important?
-                      </button>
+                      <a
+                        target="_blank"
+                        href="./assets/forms/New Company S Corp  LLC (1).pdf"
+                      >
+                        <button class="btn btn-link collapsed btn-hover">
+                          New Company S Corp LLC
+                        </button>
+                      </a>
                     </span>
                   </div>
                 </div>
@@ -419,27 +427,42 @@
                 <div class="card mb-30">
                   <div class="card-header" id="headingfour">
                     <span class="mb-0">
-                      <button class="btn btn-link collapsed">
-                        What types of insurance do you help with?
-                      </button>
+                      <a
+                        href="./assets/forms/Opening An Interstate Commerce Commission (ICC) (1).pdf"
+                        target="_blank"
+                      >
+                        <button class="btn btn-link collapsed btn-hover">
+                          Opening An Interstate Commerce Commission (ICC)
+                        </button>
+                      </a>
                     </span>
                   </div>
                 </div>
                 <div class="card mb-30">
                   <div class="card-header" id="headingfive">
                     <span class="mb-0">
-                      <button class="btn btn-link collapsed">
-                        Do you handle driver hiring and background checks?
-                      </button>
+                      <a
+                        href="./assets/forms/Establish IFTA Account (2).pdf"
+                        target="_blank"
+                      >
+                        <button class="btn btn-link collapsed btn-hover">
+                          Establish IFTA Account
+                        </button>
+                      </a>
                     </span>
                   </div>
                 </div>
                 <div class="card mb-30">
                   <div class="card-header" id="headingsix">
                     <span class="mb-0">
-                      <button class="btn btn-link collapsed">
-                        What is the Clearinghouse, and why is it important?
-                      </button>
+                      <a
+                        href="/assets/forms/Unified Carrier Registration (UCR) (1).pdf"
+                        target="_blank"
+                      >
+                        <button class="btn btn-link collapsed btn-hover">
+                          Unified Carrier Registration (UCR)
+                        </button>
+                      </a>
                     </span>
                   </div>
                 </div>
@@ -447,6 +470,201 @@
             </div>
           </div>
         </div>
+        <!-- <div class="row">
+          <div
+            class="col-xl-6 col-lg-6 col-md-6"
+            data-wow-delay="200ms"
+            style="
+              visibility: visible;
+              animation-delay: 200ms;
+              animation-name: fadeIn;
+            "
+          >
+            <div class="pe-xl-6">
+              <div id="accordion1" class="accordion-style">
+                <div class="card mb-30">
+                  <div class="card-header" id="headingSeven">
+                    <span class="mb-0">
+                      <button
+                        class="btn btn-link collapsed"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#collapseSeven"
+                        aria-expanded="false"
+                        aria-controls="collapseSeven"
+                      >
+                        What is a DQ file, and why do I need it?
+                      </button>
+                    </span>
+                  </div>
+                  <div
+                    id="collapseSeven"
+                    class="collapse"
+                    aria-labelledby="headingSeven"
+                    data-bs-parent="#accordion1"
+                    style=""
+                  >
+                    <div class="card-body">
+                      A DQ (Driver Qualification) file contains all required
+                      documentation for each driver. We help manage and organize
+                      these files to keep your business compliant with DOT
+                      regulations.
+                    </div>
+                  </div>
+                </div>
+                <div class="card mb-30">
+                  <div class="card-header" id="headingEight">
+                    <span class="mb-0">
+                      <button
+                        class="btn btn-link collapsed"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#collapseEight"
+                        aria-expanded="false"
+                        aria-controls="collapseEight"
+                      >
+                        Do you provide assistance with permits?
+                      </button>
+                    </span>
+                  </div>
+                  <div
+                    id="collapseEight"
+                    class="collapse"
+                    aria-labelledby="headingEight"
+                    data-bs-parent="#accordion1"
+                    style=""
+                  >
+                    <div class="card-body">
+                      Yes, we handle permits and licensing requirements for your
+                      fleet to ensure you’re legally operating in all states.
+                    </div>
+                  </div>
+                </div>
+                <div class="card mb-30">
+                  <div class="card-header" id="headingNine">
+                    <span class="mb-0">
+                      <button
+                        class="btn btn-link collapsed"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#collapseNine"
+                        aria-expanded="false"
+                        aria-controls="collapseNine"
+                      >
+                        How can I improve my safety performance?
+                      </button>
+                    </span>
+                  </div>
+                  <div
+                    id="collapseNine"
+                    class="collapse"
+                    aria-labelledby="headingNine"
+                    data-bs-parent="#accordion1"
+                  >
+                    <div class="card-body">
+                      We offer consulting services, including training programs,
+                      risk assessments, and ongoing monitoring of safety metrics
+                      like SMS scores to help improve your safety performance.
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="col-xl-6 col-lg-6 col-md-6"
+            data-wow-delay="200ms"
+            style="
+              visibility: visible;
+              animation-delay: 200ms;
+              animation-name: fadeIn;
+            "
+          >
+            <div class="pe-xl-6">
+              <div id="accordion" class="accordion-style">
+                <div class="card mb-30">
+                  <div class="card-header" id="headingten">
+                    <span class="mb-0">
+                      <button
+                        class="btn btn-link collapsed"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#collapseten"
+                        aria-expanded="false"
+                        aria-controls="collapseten"
+                      >
+                        What is the cost of your services?
+                      </button>
+                    </span>
+                  </div>
+                  <div
+                    id="collapseten"
+                    class="collapse"
+                    aria-labelledby="headingten"
+                    data-bs-parent="#accordion"
+                  >
+                    <div class="card-body">
+                      Our pricing depends on the specific services required for
+                      your business. We offer customized solutions tailored to
+                      your needs. Contact us for a quote.
+                    </div>
+                  </div>
+                </div>
+                <div class="card mb-30">
+                  <div class="card-header" id="headingeleven">
+                    <span class="mb-0">
+                      <button
+                        class="btn btn-link collapsed"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#collapseeleven"
+                        aria-expanded="false"
+                        aria-controls="collapseeleven"
+                      >
+                        Do you handle driver hiring and background checks?
+                      </button>
+                    </span>
+                  </div>
+                  <div
+                    id="collapseeleven"
+                    class="collapse"
+                    aria-labelledby="headingeleven"
+                    data-bs-parent="#accordion"
+                  >
+                    <div class="card-body">
+                      Yes, we help with driver recruitment, including MVR (Motor
+                      Vehicle Record), PSP (Pre-Employment Screening Program),
+                      and Clearinghouse checks to ensure you’re hiring qualified
+                      drivers.
+                    </div>
+                  </div>
+                </div>
+                <div class="card mb-30">
+                  <div class="card-header" id="headingtwelve">
+                    <span class="mb-0">
+                      <button
+                        class="btn btn-link collapsed"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#collapsetwelve"
+                        aria-expanded="false"
+                        aria-controls="collapsetwelve"
+                      >
+                        What is the process for drug and alcohol testing?
+                      </button>
+                    </span>
+                  </div>
+                  <div
+                    id="collapsetwelve"
+                    class="collapse"
+                    aria-labelledby="headingtwelve"
+                    data-bs-parent="#accordion"
+                  >
+                    <div class="card-body">
+                      We help implement and manage DOT-compliant drug and
+                      alcohol testing programs, including random testing,
+                      pre-employment testing, and post-incident testing.
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div> -->
       </div>
     </div>
     <!-- error area end -->
@@ -467,8 +685,8 @@
                 <div class="footer__widget-content">
                   <div class="footer__widget-info">
                     <p>
-                      Phasellus luctus nibh utfinibultricies. Nulla sit amet
-                      urna purus. Aenean vulputate libero nulla.
+                      WEST CONSULT INC Reliable Safety Services for the Trucking
+                      Industry
                     </p>
                     <div class="footer__social">
                       <ul>
@@ -508,22 +726,24 @@
                         <i class="fa-sharp fa-solid fa-location-dot"></i>
                       </span>
                       <a
-                        href="https://www.google.com/maps/@41.6758525,-86.2531698,18.17z"
+                        href="https://www.google.com.co/maps/place/890+N+State+St,+Elgin,+IL+60123,+США/@42.0554352,-88.2985164,17z/data=!3m1!4b1!4m6!3m5!1s0x880f056ff4b76fe9:0x846ef8c3930b5206!8m2!3d42.0554352!4d-88.2959415!16s%2Fg%2F11cp7ym2dw?entry=ttu&g_ep=EgoyMDI1MDMxNy4wIKXMDSoASAFQAw%3D%3D"
                         target="_blank"
-                        >2390 NBW 2nd Ave, Miami FLT 33127, USA</a
+                        >890 N State St Elgin, IL 60123</a
                       >
                     </li>
                     <li>
                       <span>
                         <i class="fa-sharp fa-solid fa-phone"></i>
                       </span>
-                      <a href="tel:+806(000)8899">+1 305 677-4352</a>
+                      <a href="tel:+18723340670">+1 (872) 334-0670</a>
                     </li>
                     <li>
                       <span>
                         <i class="fa-solid fa-clock"></i>
                       </span>
-                      <a href="">Mon - Sat: 8:00 am - 6:00 pm Sunday: closed</a>
+                      <a href="contact.html"
+                        >Mon - Sat: 9:00 am - 5:00 pm Sunday: closed</a
+                      >
                     </li>
                   </ul>
                 </div>
@@ -538,7 +758,12 @@
             <div class="row">
               <div class="col-xxl-12">
                 <div class="footer__copyright text-center">
-                  <p>© Copyright 2023, Insurez. All Rights Reserved</p>
+                  <p>
+                    © 2025 West Consult Inc. All Rights Reserved - Made by
+                    <a class="inctec" href="https://t.me/zakharhhh"
+                      >Inclusive Technology</a
+                    >
+                  </p>
                 </div>
               </div>
             </div>
