changed the name of comments

--- a/Insurance_01.html
+++ b/Insurance_01.html
@@ -917,7 +917,7 @@
                       <span>
                         <i class="fa-solid fa-clock"></i>
                       </span>
-                      <a href="">Mon - Sat: 9:00 am - 5:00 pm Sunday: closed</a>
+                      <a href="">Mon - Fri: 9:00 am - 5:00 pm Saturdey, Sunday: closed</a>
                     </li>
                   </ul>
                 </div>
