--- a/fields.html
+++ b/fields.html
@@ -742,7 +742,7 @@
                         <i class="fa-solid fa-clock"></i>
                       </span>
                       <a href="contact.html"
-                        >Mon - Sat: 9:00 am - 5:00 pm Sunday: closed</a
+                        >Mon - Fri: 9:00 am - 5:00 pm Saturday, Sunday: closed</a
                       >
                     </li>
                   </ul>
