--- a/index.html
+++ b/index.html
@@ -1081,7 +1081,7 @@
                             <div class="tptestimonial__meta">
                               <h5 class="reviewer-name">James Walker</h5>
                               <span class="reviewer-position">
-                                Fleet Manager, Texas Freight Solutions
+                                Sultan Trans INC
                               </span>
                             </div>
                           </div>
@@ -1112,8 +1112,8 @@
                           <div class="tptestimonial__meta">
                             <h5 class="reviewer-name">Lisa Carter</h5>
                             <span class="reviewer-position"
-                              >Safety Director, Swift Haul Logistics</span
-                            >
+                              >J7 Partners INC
+                            </span>
                           </div>
                         </div>
                       </div>
@@ -1141,9 +1141,7 @@
                         <div class="tptestimonial__designation">
                           <div class="tptestimonial__meta">
                             <h5 class="reviewer-name">Michael Rodriguez</h5>
-                            <span class="reviewer-position"
-                              >Operations Manager, Prime Express Trucking</span
-                            >
+                            <span class="reviewer-position">Fareast INC</span>
                           </div>
                         </div>
                       </div>
@@ -1172,7 +1170,7 @@
                           <div class="tptestimonial__meta">
                             <h5 class="reviewer-name">Sarah Mitchell</h5>
                             <span class="reviewer-position"
-                              >Compliance Officer, Eagle Transport Group
+                              >KMS Freight INC
                             </span>
                           </div>
                         </div>
@@ -1201,8 +1199,38 @@
                           <div class="tptestimonial__meta">
                             <h5 class="reviewer-name">Robert Johnson</h5>
                             <span class="reviewer-position"
-                              >CEO, Highway Star Logistics</span
-                            >
+                              >HIGHKICK LOGISTICS INC
+                            </span>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="tptestimonial__info">
+                        <p>
+                          A must-have partner for any trucking business! From
+                          insurance guidance to employment verification, West
+                          Consult INC handles it all. Their expertise keeps our
+                          fleet running safely and efficiently.
+                        </p>
+                        <div class="star mt-25">
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="tptestimonial">
+                      <div class="tptestimonial__avatar">
+                        <div class="tptestimonial__thumb"></div>
+                        <div class="tptestimonial__designation">
+                          <div class="tptestimonial__meta">
+                            <h5 class="reviewer-name">Michael Rodriguez</h5>
+                            <span class="reviewer-position"
+                              >Kazak Express inc
+                            </span>
                           </div>
                         </div>
                       </div>
@@ -1292,7 +1320,7 @@
                   <i class="flaticon-rate"></i>
                 </div>
                 <div class="tpfact__content">
-                  <h2><span class="">94</span>%</h2>
+                  <h2><span class="">99</span>%</h2>
                   <span>Success Rates</span>
                 </div>
               </div>
@@ -1763,7 +1791,8 @@
                         <i class="fa-solid fa-clock"></i>
                       </span>
                       <a href="contact.html"
-                        >Mon - Sat: 9:00 am - 5:00 pm Sunday: closed</a
+                        >Mon - Fri: 9:00 am - 5:00 pm Saturday, Sunday:
+                        closed</a
                       >
                     </li>
                   </ul>
