removed footer unused things

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>West Consult Inc - Contact Us</title>
+    <title>West Consult Inc - Contact Us / Reliable Safety Services for the Trucking Industry</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -521,19 +521,7 @@
                     </p>
                     <div class="footer__social">
                       <ul>
-                        <li>
-                          <a href="#"
-                            ><i class="fa-brands fa-facebook-f"></i
-                          ></a>
-                        </li>
-                        <li>
-                          <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                        </li>
-                        <li>
-                          <a href="#"
-                            ><i class="fa-brands fa-linkedin-in"></i
-                          ></a>
-                        </li>
+                       
                         <li>
                           <a href="#"
                             ><i class="fa-brands fa-pinterest-p"></i
@@ -588,10 +576,8 @@
               <div class="col-xxl-12">
                 <div class="footer__copyright text-center">
                   <p>
-                    © 2025 West Consult Inc. All Rights Reserved - Made by
-                    <a class="inctec" href="https://t.me/zakharhhh"
-                      >Inclusive Technology</a
-                    >
+                    © 2025 West Consult Inc. All Rights Reserved 
+                    
                   </p>
                 </div>
               </div>
