--- a/error.html
+++ b/error.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="utf-8">
    <meta http-equiv="x-ua-compatible" content="ie=edge">
-   <title>West Consult Inc - Error </title>
+   <title>West Consult Inc - Error  / Reliable Safety Services for the Trucking Industry</title>
    <meta name="description" content="">
    <meta name="viewport" content="width=device-width, initial-scale=1">
 
