--- a/Insurance_01.html
+++ b/Insurance_01.html
@@ -867,22 +867,8 @@
                     <div class="footer__social">
                       <ul>
                         <li>
-                          <a href="#"
-                            ><i class="fa-brands fa-facebook-f"></i
-                          ></a>
-                        </li>
-                        <li>
-                          <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                        </li>
-                        <li>
-                          <a href="#"
-                            ><i class="fa-brands fa-linkedin-in"></i
-                          ></a>
-                        </li>
-                        <li>
-                          <a href="#"
-                            ><i class="fa-brands fa-pinterest-p"></i
-                          ></a>
+                          <a href="https://www.instagram.com/thewestconsult?igsh=NTJpNXZ1aHZwYzhq"><i
+                              class="fa-brands fa-instagram"></i></a>
                         </li>
                       </ul>
                     </div>
