--- a/error.html
+++ b/error.html
@@ -316,14 +316,14 @@
                         <div class="footer__widget-info">
                            <p>Phasellus luctus nibh utfinibultricies. Nulla sit amet urna purus. Aenean vulputate libero
                               nulla.</p>
-                           <div class="footer__social">
-                              <ul>
-                                 <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                                 <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                                 <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                                 <li><a href="#"><i class="fa-brands fa-pinterest-p"></i></a></li>
-                              </ul>
-                           </div>
+                              <div class="footer__social">
+                                 <ul>
+                                   <li>
+                                     <a href="https://www.instagram.com/thewestconsult?igsh=NTJpNXZ1aHZwYzhq"><i
+                                         class="fa-brands fa-instagram"></i></a>
+                                   </li>
+                                 </ul>
+                               </div>
                         </div>
                      </div>
                   </div>
