--- a/faqs.html
+++ b/faqs.html
@@ -850,11 +850,9 @@
                     </p>
                     <div class="footer__social">
                       <ul>
-                       
                         <li>
-                          <a href="#"
-                            ><i class="fa-brands fa-pinterest-p"></i
-                          ></a>
+                          <a href="https://www.instagram.com/thewestconsult?igsh=NTJpNXZ1aHZwYzhq"><i
+                              class="fa-brands fa-instagram"></i></a>
                         </li>
                       </ul>
                     </div>
