--- a/fields.html
+++ b/fields.html
@@ -212,9 +212,9 @@
                             <a href="faqs.html">FAQ</a>
                           </li>
                           <li>
-                            <a class="active" href="contact.html">Contact</a>
+                            <a href="contact.html">Contact</a>
                           </li>
-                          <li><a href="fields.html">Forms</a></li>
+                          <li><a class="active"  href="fields.html">Forms</a></li>
                         </ul>
                       </nav>
                     </div>
@@ -690,11 +690,9 @@
                     </p>
                     <div class="footer__social">
                       <ul>
-                       
                         <li>
-                          <a href="#"
-                            ><i class="fa-brands fa-pinterest-p"></i
-                          ></a>
+                          <a href="https://www.instagram.com/thewestconsult?igsh=NTJpNXZ1aHZwYzhq"><i
+                              class="fa-brands fa-instagram"></i></a>
                         </li>
                       </ul>
                     </div>
